--- a/admin_api/requirements.txt
+++ b/admin_api/requirements.txt
@@ -1,3 +1,4 @@
+aiocache==0.11.1
 anyio==3.6.1
 asyncpg==0.26.0
 click==8.1.3
@@ -8,7 +9,8 @@ httpagentparser==1.9.3
 idna==3.4
 pydantic==1.10.2
 sniffio==1.3.0
-SQLAlchemy==1.4.41
+sqlalchemy==1.4.41
 starlette==0.20.4
 typing_extensions==4.3.0
+ujson=5.5.0
 uvicorn==0.18.3
